--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8" />
     <title>Herocorp</title>
 
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <div class="container">
       <header>
-        <img src="../images/hc.png" alt="logo hc" />
+        <img src="./images/hc.png" alt="logo hc" />
         <h1>Hero Corp <span>La série</span></h1>
       </header>
 
       <main>
         <section id="presentation">
           <h2>Présentation</h2>
-          <img src="../images/hc-logo.png" alt="logo hero corp" />
+          <img src="./images/hc-logo.png" alt="logo hero corp" />
           <p>
             <strong>Hero Corp</strong> est une série télévisée française
             fantastique et humoristique, produite par CALT, créée par Simon
@@ -124,7 +124,7 @@
 
           <div class="action">
             <img
-              src="../images/groupe.jpg"
+              src="./images/groupe.jpg"
               alt="photo de groupe des acteurs de hero corp"
             />
             <h3>Prêt à l'action</h3>
@@ -132,14 +132,14 @@
           </div>
 
           <div class="logo">
-            <img src="../images/hc-logo.png" alt="logo de hero corp" />
+            <img src="./images/hc-logo.png" alt="logo de hero corp" />
             <h3>Logo</h3>
             <p>Logo de la célèbre ligue des justiciers</p>
           </div>
 
           <div class="costume">
             <img
-              src="../images/groupe-costumes.jpg"
+              src="./images/groupe-costumes.jpg"
               alt="photo de groupe de hero corp en costume"
             />
             <h3>En costume</h3>
